--- a/main.kv
+++ b/main.kv
@@ -1,5 +1,5 @@
 <Button>
-    font_size: 24
+    font_size: 0.50 * self.height
     size_hint: 0.25, 0.15
 
 <MainDisplay>:
@@ -12,7 +12,7 @@
             Label:
                 id: result_window
                 text_size: self.width, None
-                font_size: 48
+                font_size: 0.75 * self.height
                 pos_hint: {"y": 0.60}
                 halign: "center"
                 valign: "bottom"
@@ -26,7 +26,7 @@
                 halign: "right"
                 valign: "middle"
                 text: root.equation
-                font_size: 36
+                font_size: 0.75 * self.height
         FloatLayout:
             Button:
                 pos_hint: {"x": 0, "y": 0}
